Fixed tests and code coverage so pods aren't listed

--- a/RicosCafe.xcodeproj/xcshareddata/xcschemes/RicosCafe.xcscheme
+++ b/RicosCafe.xcodeproj/xcshareddata/xcschemes/RicosCafe.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A863A40E21AF07E500E73566"
+            BuildableName = "RicosCafe.app"
+            BlueprintName = "RicosCafe"
+            ReferencedContainer = "container:RicosCafe.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
